--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 * {
 	box-sizing: border-box;
 }
+
 html {
     width: 100%;
     height: 100%;
@@ -29,20 +30,20 @@ html {
     margin-top: 3vw;
     background-color: white;
     border-radius: 10px;
-
-     box-shadow: 7px 10px 10px -8px #000;
+    box-shadow: 7px 10px 10px -8px #000;
 }
 
 #title {
     text-align: center;
     font-size: 45px;
     color: #090909;
-    padding-top: 10px;
+    padding-top: 30px;
+    padding-bottom: 20px;
 }
 
 #description {
     color: #e98074;
-    font-size: 14px;
+    font-size: 17px;
     font-weight: 620;
     text-align: center;
     margin-top: 20px;
@@ -69,6 +70,7 @@ html {
     padding-left: 10px;
     font-weight: 600;
     transform: translateY(-0px);
+    color: white;
 }
 
 #survey-form {
@@ -138,9 +140,44 @@ label {
     text-align: center;
 }
 
-
 #personal-info-icon {
     background-image: url("resources/Section_Icons/personal_info.svg");
+}
+
+#education-icon {
+    background-image: url("resources/Section_Icons/qualification.svg");
+}
+
+#college, #company, #experience {
+    margin-top: 1%;
+}
+
+#college-label, #company-label, #experience-label {
+    margin-top: 5%;
+}
+
+#field-2 {
+    margin-bottom: 8.7%;
+}
+
+.field {
+    animation-duration: 0s;
+}
+
+select {
+    width: 10vw;
+    border-style: none;
+    border-bottom: 1px solid black;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    color: #555;
+}
+
+select:focus {
+    outline-style: none;
+    border-bottom: 2px solid black !important;
+    width: 10.5vw;
 }
 
 #buttons {
@@ -149,7 +186,6 @@ label {
 }
 
 .button-div {
-    background-cdolor: red;
     width: 33.33%;
     height: 5vh;
     float: left;
