--- a/style.css
+++ b/style.css
@@ -184,6 +184,25 @@ select:focus {
     width: 10.5vw;
 }
 
+.box-input-container{
+    height: 7%;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.checkbox-div{
+    width: 20%;
+    float: left;
+}
+
+.checkbox-label {
+    margin: 0px;
+}
+
+#field-3 {
+    margin-bottom: -1.5%;
+}
+
 #buttons {
     width: 100%;
     margin-top: 1.5vw;
