--- a/style.css
+++ b/style.css
@@ -188,11 +188,12 @@ select:focus {
     height: 7%;
     width: 90%;
     margin: 0 auto;
+    margin-left: calc(15%);
 }
 
 .checkbox-div{
     width: 20%;
-    float: right;
+    float: left;
 }
 
 .checkbox-label {
@@ -216,7 +217,6 @@ select:focus {
 
 .button-img {
     width: 4.5vw;
-    pdosition: absolute;
     left: -50%;
     transform: translateX(50%);
 
@@ -226,6 +226,7 @@ input[type="button"], input[type="submit"] {
     visibility: hidden;
 }
 
+/* CUSTOM CHECKBOX STYLES */
 
 /* Base for label styling */
 [type="checkbox"]:not(:checked),
@@ -233,6 +234,7 @@ input[type="button"], input[type="submit"] {
   position: absolute;
   left: -9999px;
 }
+
 [type="checkbox"]:not(:checked) + label,
 [type="checkbox"]:checked + label {
   position: relative;
@@ -247,32 +249,36 @@ input[type="button"], input[type="submit"] {
   position: absolute;
   left: 0; top: 0;
   width: 1.25em; height: 1.25em;
-  border: 2px solid #ccc;
+  border: 1px solid #000;
   background: #fff;
   border-radius: 4px;
   box-shadow: inset 0 1px 3px rgba(0,0,0,.1);
 }
+
 /* checked mark aspect */
 [type="checkbox"]:not(:checked) + label:after,
 [type="checkbox"]:checked + label:after {
   content: '\2713\0020';
   position: absolute;
-  top: .15em; left: .22em;
-  font-size: 1.3em;
-  line-height: 0.8;
-  color: #09ad7e;
+  top: .15em; left: .12em;
+  font-size: 1.5em;
+  line-height: 0.2;
+  color: #E85A4F;
   transition: all .2s;
   font-family: 'Lucida Sans Unicode', 'Arial Unicode MS', Arial;
 }
+
 /* checked mark aspect changes */
 [type="checkbox"]:not(:checked) + label:after {
   opacity: 0;
   transform: scale(0);
 }
+
 [type="checkbox"]:checked + label:after {
   opacity: 1;
   transform: scale(1);
 }
+
 /* disabled checkbox */
 [type="checkbox"]:disabled:not(:checked) + label:before,
 [type="checkbox"]:disabled:checked + label:before {
@@ -280,19 +286,74 @@ input[type="button"], input[type="submit"] {
   border-color: #bbb;
   background-color: #ddd;
 }
+
 [type="checkbox"]:disabled:checked + label:after {
   color: #999;
 }
+
 [type="checkbox"]:disabled + label {
   color: #aaa;
-}
-/* accessibility */
-[type="checkbox"]:checked:focus + label:before,
-[type="checkbox"]:not(:checked):focus + label:before {
-  border: 2px dotted blue;
 }
 
 /* hover style just for information */
 label:hover:before {
-  border: 2px solid #4778d9!important;
+  border: 2px solid #E85A4F!important;
+}
+
+/* CUSTOM RADIO BUTTON STYLES */
+
+[type="radio"]:checked,
+[type="radio"]:not(:checked) {
+    position: absolute;
+    left: -9999px;
+}
+
+[type="radio"]:checked + label,
+[type="radio"]:not(:checked) + label
+{
+    position: relative;
+    padding-left: 28px;
+    cursor: pointer;
+    line-height: 20px;
+    display: inline-block;
+    color: #000;
+}
+
+[type="radio"]:checked + label:before,
+[type="radio"]:not(:checked) + label:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 18px;
+    height: 18px;
+    border: 1px solid #000;
+    border-radius: 100%;
+    background: #fff;
+}
+
+[type="radio"]:checked + label:after,
+[type="radio"]:not(:checked) + label:after {
+    content: '';
+    width: 12px;
+    height: 12px;
+    background: #E85A4F;
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    border-radius: 100%;
+    -webkit-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+}
+
+[type="radio"]:not(:checked) + label:after {
+    opacity: 0;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+}
+
+[type="radio"]:checked + label:after {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
 }
