--- a/style.css
+++ b/style.css
@@ -152,6 +152,12 @@ label {
     background-image: url("resources/Section_Icons/skills.svg");
 }
 
+#coding-icon {
+    background-image: url("resources/Section_Icons/coding.svg");
+}
+
+
+
 #college, #company, #experience {
     margin-top: 1%;
 }
@@ -201,7 +207,24 @@ select:focus {
 }
 
 #field-3 {
-    margin-bottom: 6%;
+    margin-bottom: 6.5%;
+}
+
+#field-4 {
+    margin-bottom: 28%;
+}
+
+#coding-question {
+    margin-top: -20px;
+}
+
+textarea {
+    width: 20%;
+    height: 15%;
+    position: absolute;
+    padding-left: 5px;
+    left: 50%;
+    transform: translate(-50%);
 }
 
 #buttons {
